ajout de la documentation du code